--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,26 @@
 # Web Framework
-Flask==3.0.0
-Werkzeug==3.0.1
+Flask
+Werkzeug
 
 # Data Processing
-pandas==2.1.4
-numpy==1.26.2
-openpyxl==3.1.2
+# Pandas bản mới mới hỗ trợ Python 3.13
+pandas>=2.2.3
+# Numpy bản mới
+numpy>=1.26.4
+openpyxl
 
 # Data Visualization
-matplotlib==3.8.2
-seaborn==0.13.0
+matplotlib
+seaborn
 
 # Statistical Analysis
-scipy==1.11.4
+scipy
 
 # AI/Chatbot
-groq==0.4.1
+groq
 
 # Environment Variables
-python-dotenv==1.0.0
+python-dotenv
+
+# Production Server
+gunicorn
